Add retrieval status, enforce GraphQL security, and clean up frontend (#237)
Backend — GraphQL API (comic-api)
- Retrieval status resolver — new retrievalSummary and retrievalRecords queries with typed DTOs
- All 11 missing resolvers implemented — health, errorCodes, batchJob queries, forgotPassword/resetPassword/deleteAccount/triggerBatchJob/triggerBackfillJob mutations, plus supporting services (mail, password reset tokens, user deletion)
- Security enforcement — @PreAuthorize annotations on every resolver backing @authenticated/@hasRole directives (previously decorative)
- Error handling — GraphQLExceptionHandlerConfig maps domain exceptions to typed GraphQL errors instead of raw stack traces
- Relay mutation payloads — all mutations return { result, errors } payloads
- Type safety cleanup — RetrievalResolver returns typed records instead of Map<String, Object>, metrics resolvers use typed wrapper DTOs instead of instanceof chains, RetrievalStatusEnum maps 1:1 to the Java enum
- Query depth limiting — max depth 10 via MaxQueryDepthInstrumentation
- Housekeeping — removed unused LocalTime scalar, removed WebSecurityCustomizer, fixed constructor injection

Frontend — comic-hub
- Retrieval status page — new dashboard page with summary cards, status breakdown, sortable records table
- Schema alignment — updated codegen, hooks, and components for new RetrievalStatusEnum values and Relay-style mutation payloads; codegen now uses local schema files
- Dead code removal — unreachable try/catch in forgot-password, redundant ?? fallbacks on Zod/GraphQL errors, no-op ?? undefined
- Metrics guard improvement — expanded to cover null storage+access, showing empty state instead of zeros
- Toast notifications — replaced console.warn with toast.warning for mutation errors; mounted <Toaster /> in Providers
- Bug fix: favorite card avatars — FavoriteCard was ignoring avatarUrl passed from FavoritesSection; now renders AvatarImage so comic avatars display in the favorites section
- 